# grimoirelab-kidash

./: .gitignore  AUTHORS  NEWS  README.md  pyproject.toml  setup.py
.github/workflows/: changelog.yml  ci.yml  release.yml  tests.yml
kidash/: _version.py  kidash.py  phoenix.py  utils.py
kidash/clients/: dashboard.py  http.py  saved_objects.py
releases/: 0.5.0.md  0.5.1-rc.1.md  0.5.1-rc.2.md  0.5.1-rc.3.md  0.5.1-rc.4.md  0.5.1-rc.5.md  0.5.1-rc.6.md  0.5.1-rc.7.md  0.5.1.md  0.5.2-rc.1.md  0.5.2.md  0.5.3-rc.1.md  0.5.3-rc.2.md  0.5.3-rc.3.md  0.5.3.md  0.5.4-rc.1.md  0.5.4.md  0.5.5.md  0.5.6-rc.1.md  0.5.6.md  0.5.7-rc.1.md  0.5.7.md  0.5.8-rc.1.md  0.5.8.md  0.5.9-rc.1.md  0.5.9.md  0.6.0-rc.1.md  0.6.0-rc.2.md  0.6.0.md  0.6.1-rc.1.md  0.6.1.md  0.6.2-rc.1.md  0.6.2.md  0.6.3-rc.1.md  0.6.3.md  0.6.4-rc.1.md  0.6.4-rc.2.md  0.6.4.md  0.6.5-rc.1.md  0.6.5.md  (+60 more)
releases/unreleased/: downgrade-urllib3-from-207-to-126.yml  update-poetry-dependencies.yml
tests/: test_export.py  test_http.py  test_saved_objects.py
tests/data/: object_index-pattern  object_visualization  objects_1  objects_2  objects_empty  objects_error  overview-with-index-patterns.json
